package echo;
option py_generic_services = true;
option cc_generic_services = true;
option java_generic_services = true;
option java_package = "cetty.protobuf.echo";
option java_outer_classname = "EchoProto";

message EchoRequest {
  required string payload = 1;
}

message EchoResponse {
  required string payload = 2;
}

service EchoService {
  rpc echo (EchoRequest) returns (EchoResponse);
}
